--- a/DevHelloAspNet/TemplateWebApp/TemplateWebApp.csproj
+++ b/DevHelloAspNet/TemplateWebApp/TemplateWebApp.csproj
@@ -138,6 +138,7 @@
     <Content Include="Site.Mobile.Master" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
+    <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
