ASP.NET MVC 포트폴리오 COMMIT

--- a/MvcSolutions/MyPortpolio/appsettings.json
+++ b/MvcSolutions/MyPortpolio/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MyPortpolio-078C170E-C04B-48CF-B2DF-7D5EB1F1BDEA;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=MvcWebLab;Persist Security Info=True;User ID=sa;Password=mssql_p@ssw0rd!"
   },
   "Logging": {
     "LogLevel": {
